<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".payment.PaymentActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cash_payment"
        android:textOff="@string/cash_payment"
        android:textOn="@string/credit_card_payment" />

    <include
        android:id="@+id/layoutCreditCard"
        layout="@layout/layout_payment_credit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/agreement_text" />

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_button_text" />

</LinearLayout>